methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:1: error: method growFlowers overrides nothing
override def growFlowers(){
             ^